--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,13 @@ scikit-learn==1.6.1
 matplotlib
 python-pptx
 
+fastapi
+uvicorn[standard]
+joblib
+python-multipart  # para subir CSV por HTTP
+pytest
+
+
 
 
 
